--- a/mercadofacil.frontend/index.html
+++ b/mercadofacil.frontend/index.html
@@ -3,8 +3,12 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/png" href="/src/assets/images/Icone.png" />
+    <link rel="manifest" href="/manifest.json" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Mercado Fácil - Gerenciador de listas de compras" />
+    <meta name="theme-color" content="#2d8659" />
+    <meta name="apple-mobile-web-app-capable" content="yes" />
+    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
     <title>Mercado Fácil</title>
   </head>
   <body>
